Image map concept learn

--- a/image_map.html
+++ b/image_map.html
@@ -9,6 +9,8 @@
     
   &lt;html&gt;<br>
 
+        <h1>Image Map Concept</h1>
+
   
     <img src="image/social_media.png" alt="social media" usemap="#social">
 
