--- a/1index.html
+++ b/1index.html
@@ -48,7 +48,7 @@
     <br>
 
     <footer>
-        <p>@ 2025 OfflineJobs. All right reserved.</p>
+        <p>&copy; 2025 OfflineJobs. All right reserved.</p>
     </footer>
     
 </body>
