--- a/image_map.html
+++ b/image_map.html
@@ -10,6 +10,8 @@
   &lt;html&gt;<br>
 
         <h1>Image Map Concept</h1>
+        <p>Welcome </p>
+        
 
   
     <img src="image/social_media.png" alt="social media" usemap="#social">
@@ -31,9 +33,13 @@
        
     </map>
 
+    <p>Thia is marquee tag</p>
+
     <marquee behavior="" direction="left">
 
         <h1>Welcome to my web design</h1>
+
+        <img src="image/WhatsApp Image 2025-08-03 at 23.55.57_4d334e8d.jpg" alt="">
 
     </marquee>
   
