--- a/1post.html
+++ b/1post.html
@@ -56,7 +56,7 @@
     <br>
 
     <footer>
-        <p>@ 2025 OfflineJobs. All right reserved.</p>
+        <p>&copy; 2025 OfflineJobs. All right reserved.</p>
     </footer>
     
 </body>
