--- a/1search.html
+++ b/1search.html
@@ -68,7 +68,7 @@
     <br>
 
     <footer>
-        <p>@ 2025 OfflineJobs. All right reserved.</p>
+        <p>&copy; 2025 OfflineJobs. All right reserved.</p>
     </footer>
     
 </body>
