--- a/image_map.html
+++ b/image_map.html
@@ -33,7 +33,20 @@
        
     </map>
 
+    <br>
+
+    <img src="image/music_icon.webp" alt="Music Icon" usemap="#music">
+
+    <map name="music">
+
+        <area shape="rect" coords="50,60,184,190" href="https://open.spotify.com/" alt="sportify"
+        target="_top">
+
+    </map>
+
     <p>Thia is marquee tag</p>
+
+    <p title="About me">Hover to see the tooltip.</p>
 
     <marquee behavior="" direction="left">
 
@@ -42,6 +55,8 @@
         <img src="image/WhatsApp Image 2025-08-03 at 23.55.57_4d334e8d.jpg" alt="">
 
     </marquee>
+
+    
   
 
 
